--- a/Rocketseat/totalist/pom.xml
+++ b/Rocketseat/totalist/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.leandrolara</groupId>
 	<artifactId>totalist</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>totalist</name>
 	<description>Gerenciador de tarefas</description>
 	<properties>
